# InvisibleCloak-IA

./: CVwDL_Laboratorio2_2023_3_EST.ipynb  Dockerfile  README.md  acto.py  bacnkup.py  casi.py  colorInvisible.py  final.py  fotoss.py  imagen.py  imagen_red.py  maybe.py  proyecto.py  pyproject.toml  segmenta.py  takePhoto.py  uyyy.py
