[tool.poetry]
name = "proyecto-final"
version = "0.1.0"
description = ""
authors = ["cosorio <carlosivanosorio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
opencv-python = "^4.8.0.76"
ultralytics = "^8.0.184"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
